crates/crochet_parser/src/snapshots/crochet__parser__tests__decls-2.snap
---
source: src/parser/mod.rs
expression: "parse(\"   let x = 5\")"
---
Program {
    body: [
        VarDecl {
            span: 3..12,
            pattern: Ident(
                BindingIdent {
                    span: 7..8,
                    id: Ident {
                        span: 7..8,
                        name: "x",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lit(
                    Num(
                        Num {
                            span: 11..12,
                            value: "5",
                        },
                    ),
                ),
            ),
            declare: false,
        },
    ],
}
