crates/crochet_parser/src/snapshots/crochet__parser__tests__destructuring-8.snap
---
source: src/parser/mod.rs
expression: "parse(\"let foo = ({a, b}) => b\")"
---
Program {
    body: [
        VarDecl {
            span: 0..23,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                    type_ann: None,
                },
            ),
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..23,
                        params: [
                            Object(
                                ObjectPat {
                                    span: 11..17,
                                    props: [
                                        Assign(
                                            AssignPatProp {
                                                span: 12..13,
                                                key: Ident {
                                                    span: 12..13,
                                                    name: "a",
                                                },
                                                value: None,
                                            },
                                        ),
                                        Assign(
                                            AssignPatProp {
                                                span: 15..16,
                                                key: Ident {
                                                    span: 15..16,
                                                    name: "b",
                                                },
                                                value: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                    type_ann: None,
                                },
                            ),
                        ],
                        body: Ident(
                            Ident {
                                span: 22..23,
                                name: "b",
                            },
                        ),
                        is_async: false,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
