crates/crochet_parser/src/snapshots/crochet__parser__tests__function_application-3.snap
---
source: src/parser/mod.rs
expression: "parse(\"foo(10, \\\"hello\\\")\")"
---
Program {
    body: [
        Expr {
            span: 0..16,
            expr: App(
                App {
                    span: 0..16,
                    lam: Ident(
                        Ident {
                            span: 0..3,
                            name: "foo",
                        },
                    ),
                    args: [
                        Lit(
                            Num(
                                Num {
                                    span: 4..6,
                                    value: "10",
                                },
                            ),
                        ),
                        Lit(
                            Str(
                                Str {
                                    span: 8..15,
                                    value: "hello",
                                },
                            ),
                        ),
                    ],
                },
            ),
        },
    ],
}
