crates/crochet_parser/src/snapshots/crochet__parser__tests__operations-5.snap
---
source: src/parser/mod.rs
expression: "parse(\"a != b\")"
---
Program {
    body: [
        Expr {
            span: 0..6,
            expr: Op(
                Op {
                    span: 0..6,
                    op: NotEq,
                    left: Ident(
                        Ident {
                            span: 0..1,
                            name: "a",
                        },
                    ),
                    right: Ident(
                        Ident {
                            span: 5..6,
                            name: "b",
                        },
                    ),
                },
            ),
        },
    ],
}
